[project]
name = "langchain-llama-server"
version = "0.1.0"
description = "LangChain integrations for llama-server inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-openai>=0.3.35",
    "rich>=14.3.3",
    "yapf>=0.43.0",
]
